feat: index.html 타이틀, 메타 태그, favicon 추가

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>UNIVENT - 고려대학교 행사 정보 서비스</title>
+    <!-- Open Graph -->
+    <meta property="og:title" content="UNIVENT" />
+    <meta
+      property="og:description"
+      content="고려대학교의 행사 정보를 한눈에 확인하세요!"
+    />
+    <meta property="og:url" content="https://goyangeyaong.shop/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
