feat: 메타 태그 이미지 추가 및 타이틀 소문자로 변경

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UNIVENT - 고려대학교 행사 정보 서비스</title>
+    <title>univent - 고려대학교 행사 정보 서비스</title>
     <!-- Open Graph -->
-    <meta property="og:title" content="UNIVENT" />
+    <meta property="og:image" content="/ogImage.png" />
+    <meta property="og:title" content="univent" />
     <meta
       property="og:description"
       content="고려대학교의 행사 정보를 한눈에 확인하세요!"
