chore: 메타 태그 url 서비스 도메인으로 변경

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       property="og:description"
       content="고려대학교의 행사 정보를 한눈에 확인하세요!"
     />
-    <meta property="og:url" content="https://goyangeyaong.shop/" />
+    <meta property="og:url" content="https://univent.my/" />
     <meta property="og:type" content="website" />
   </head>
   <body>
