chore: index.html 타이틀 서비스 -> 플랫폼으로 수정

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>univent - 고려대학교 행사 정보 서비스</title>
+    <title>univent - 고려대학교 행사 정보 플랫폼</title>
     <!-- Open Graph -->
     <meta property="og:image" content="/ogImage.png" />
     <meta property="og:title" content="univent" />
